View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032465 | Open CASCADE | OCCT:Visualization | public | 2021-06-28 09:30 | 2021-07-03 14:45 |
Reporter | kgv | Assigned To | kgv | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.6.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032465: Visualization, TKOpenGles - invalid enum on GL_RGBA16F initialization in Edge 92 | ||||
Description | Enabling OIT in Microsoft Edge 92 fails with invalid enum error:Draw[25]> vrenderparams -oit weight 0.0 TKOpenGl | Type: Error | ID: 0 | Severity: High | Message: Error: 2D texture 512x512 IF: GL_RGBA16F PF: GL_RGBA DT: GL_HALF_FLOAT_OES can not be created with error GL_INVALID_ENUM [] Draw[29]> vglinfo OpenGL info: EGLVersion: 1.4 Emscripten EGL EGLVendor: Emscripten EGLClientAPIs: OpenGL_ES GLvendor: WebKit GLdevice: WebKit WebGL GLunmaskedVendor: Google Inc. (AMD) GLunmaskedDevice: ANGLE (AMD, AMD Radeon (TM) R9 380 Series Direct3D11 vs_5_0 ps_5_0, D3D11-27.20.21002.112) GLversion: OpenGL ES 3.0 (WebGL 2.0 (OpenGL ES 3.0 Chromium)) GLSLversion: OpenGL ES GLSL ES 3.00 (WebGL GLSL ES 3.00 (OpenGL ES GLSL ES 3.0 Chromium)) Max texture size: 16384 Max FBO dump size: 16384x16384 Max combined texture units: 32 Max MSAA samples: 0 Viewport: 512x512 ResolutionRatio: 1 Draw[31]> vglinfo EXTENSIONS EXT_color_buffer_float EXT_color_buffer_half_float EXT_disjoint_timer_query_webgl2 EXT_float_blend EXT_texture_compression_bptc EXT_texture_compression_rgtc EXT_texture_filter_anisotropic EXT_texture_norm16 KHR_parallel_shader_compile OES_texture_float_linear WEBGL_compressed_texture_s3tc WEBGL_compressed_texture_s3tc_srgb WEBGL_debug_renderer_info WEBGL_debug_shaders WEBGL_lose_context WEBGL_multi_draw OVR_multiview2 GL_EXT_color_buffer_float GL_EXT_color_buffer_half_float GL_EXT_disjoint_timer_query_webgl2 GL_EXT_float_blend GL_EXT_texture_compression_bptc GL_EXT_texture_compression_rgtc GL_EXT_texture_filter_anisotropic GL_EXT_texture_norm16 GL_KHR_parallel_shader_compile GL_OES_texture_float_linear GL_WEBGL_compressed_texture_s3tc GL_WEBGL_compressed_texture_s3tc_srgb GL_WEBGL_debug_renderer_info GL_WEBGL_debug_shaders GL_WEBGL_lose_context GL_WEBGL_multi_draw GL_OVR_multiview2 Note that the same sample runs fine in Firefox 87 on the same system and EXT_color_buffer_half_float is reported as supported. | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32465 has been created by kgv. SHA-1: 3040f4156429f8560100f1824058a6c2f380c185 Detailed log of new commits: Author: kgv Date: Mon Jun 28 22:58:37 2021 +0300 0032465: Visualization, TKOpenGles - invalid enum on GL_RGBA16F initialization in Edge 92 GL_HALF_FLOAT_OES from OpenGL ES 2.0 extension is now avoided within OpenGL ES 3.0+ context in favor of GL_HALF_FLOAT. emscripten_webgl_enable_extension() is now called for all extensions checked by OpenGl_Context::CheckExtension(). So far this doesn't solve any problem, but looks more logical and provisional. |
|
Branch CR32465 has been updated forcibly by kgv. SHA-1: 0770d850d6603744bf2e47e619042a6629bc6a65 |
|
Patch is ready for review - OCCT: branch CR32465. http://jenkins-test-12.nnov.opencascade.com/view/CR32465-master-KGV/ |
|
The patch was reviewed without remarks |
|
Combination - OCCT branch : IR-2021-07-02 master SHA - 1f3c5058f27ddcbc23af3b05820e4433bb1009db a87b7ddc8cb44606b91e3f37113847c3f5f50fdc Products branch : IR-2021-07-02 SHA - a0de44eb21bec792a53984d50cb770f6679dbbd8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17426.490000000336 / 17457.450000000455 [-0.18%] Products Total CPU difference: 11521.170000000124 / 11511.540000000101 [+0.08%] Windows-64-VC14: OCCT Total CPU difference: 19263.921875 / 19236.96875 [+0.14%] Products Total CPU difference: 12854.34375 / 12832.328125 [+0.17%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32465 has been deleted by mnt. SHA-1: 0770d850d6603744bf2e47e619042a6629bc6a65 |
occt: master 0770d850 2021-06-28 19:58:37 Details Diff |
0032465: Visualization, TKOpenGles - invalid enum on GL_RGBA16F initialization in Edge 92 GL_HALF_FLOAT_OES from OpenGL ES 2.0 extension is now avoided within OpenGL ES 3.0+ context in favor of GL_HALF_FLOAT. emscripten_webgl_enable_extension() is now called for all extensions checked by OpenGl_Context::CheckExtension(). So far this doesn't solve any problem, but looks more logical and provisional. |
Affected Issues 0032465 |
|
mod - src/OpenGl/OpenGl_Context.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_GlFunctions.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-06-28 09:30 | kgv | New Issue | |
2021-06-28 09:30 | kgv | Assigned To | => kgv |
2021-06-28 22:57 | git | Note Added: 0102140 | |
2021-06-28 23:01 | git | Note Added: 0102142 | |
2021-06-29 00:32 | kgv | Note Added: 0102143 | |
2021-06-29 00:32 | kgv | Assigned To | kgv => osa |
2021-06-29 00:32 | kgv | Status | new => resolved |
2021-06-29 11:30 | osa | Note Added: 0102146 | |
2021-06-29 11:30 | osa | Assigned To | osa => bugmaster |
2021-06-29 11:30 | osa | Status | resolved => reviewed |
2021-07-03 11:08 | bugmaster | Note Added: 0102241 | |
2021-07-03 11:08 | bugmaster | Status | reviewed => tested |
2021-07-03 11:10 | bugmaster | Test case number | => Not required |
2021-07-03 11:14 | kgv | Changeset attached | => occt master 0770d850 |
2021-07-03 11:14 | kgv | Assigned To | bugmaster => kgv |
2021-07-03 11:14 | kgv | Status | tested => verified |
2021-07-03 11:14 | kgv | Resolution | open => fixed |
2021-07-03 14:45 | git | Note Added: 0102261 |